--- a/pitcher.html
+++ b/pitcher.html
@@ -25,7 +25,7 @@ En attendant qu’ils s’y trouvent, mentionnons les deux mots qui l’encadrer
         PITAUD, -AUDE, substantif:
         Étymologie et Histoire. a) XVe, <b>petaulx</b>, masculin pluriel «anciens soldats» (Froissart, Chroniques). 1546, le roy <b>Petault</b> «personnage sans 
         autorité» (Rabelais, <u>Tiers Livre</u>); b) 1547, <b>pitault</b> «lourdaud» (N. Du Fail, 
-        <u>Propos rustiques</u>). Mot d'origine obscure ; Peut-être dérivé à l'aide du suffixe péjoratif -aud de <b>pet </b> issu, ou, avec substitution de suffixe, 
+        <u>Propos rustiques</u>). Mot d'origine obscure ; Peut-être dérivé à l'aide du suffixe péjoratif -aud de <b>pet </b>, ou issu, avec substitution de suffixe, 
         de <b>piteux</b>.
         
     </li>
