--- a/pitcher.html
+++ b/pitcher.html
@@ -60,7 +60,7 @@ Angel, selon le Cambridge Dictionnary :
 <br><br>
 Il semblerait que nous ayons à faire à la première définition d’ « angel », car il faut bien au moins cela pour déterminer, après cinq minutes de présentation d’une difficulté à résoudre et de la solution pour la résoudre, si la personne a « the right mindset » pour obtenir les capitaux émancipant. Ou alors les business angels sont really very good persons.
 
-Lorsqu’il s’agit d’une personne souhaitant se faire recruter, il s’agit de se présenter, en un temps du même ordre de grandeur que celui donné ci-dessus, afin de convaincre, sur la base de cette présentation, son auditoire très sérieux qu’elle pourrait être recruté.
+Lorsqu’il s’agit d’une personne souhaitant se faire recruter, il s’agit de se présenter, en un temps du même ordre de grandeur que celui donné ci-dessus, afin de convaincre, sur la base de cette présentation, son auditoire très sérieux qu’elle pourrait être recrutée.
 <br><br>
 Sérieux : (extrait du CNRTL)
 <br>
